--- a/spring-cloud-config/docker/Dockerfile
+++ b/spring-cloud-config/docker/Dockerfile
@@ -1,4 +1,6 @@
-FROM alpine:edge
-MAINTAINER baeldung.com
-RUN apk add --no-cache openjdk8
-COPY files/UnlimitedJCEPolicyJDK8/* /usr/lib/jvm/java-1.8-openjdk/jre/lib/security/
+FROM frolvlad/alpine-oraclejdk8:slim
+VOLUME /tmp
+ADD servicedescovery-0.0.1-SNAPSHOT.jar app.jar
+RUN sh -c 'touch /app.jar'
+ENV JAVA_OPTS=""
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar" ]
